--- a/templates/index.html
+++ b/templates/index.html
@@ -79,17 +79,24 @@
             var si_prov = data[data.length-1].si_prov;
             var si_nom = data[data.length-1].si_nom;
             var si_apell = data[data.length-1].si_apell;
+            var si_apla = data[data.length-1].si_apla;
+            var si_apro = data[data.length-1].si_apro;
+            var si_des = data[data.length-1].si_des;
+              var carrera = data[data.length-1].car;
             for (var i = 0; i < 1; i++) {
-              var carrera = data[i].car;
               var dep = data[i].dep;
               var provi = data[i].provi;
               var nom = data[i].nombre;
               var ap = data[i].ap;
               var am = data[i].am;
             }
-            var si = "no";
-            var mensaje = "Los estudiantes ";
-            var retu = verificar(si_activo,si_desactivo,si_m,si_f,si_dep,si_prov,si_nom,si_apell,carrera,dep,provi,nom,ap,am,si);
+            var si = "no";var mensaje = "";
+            if(si_nom != "no"){
+              var mensaje = "El estudiante ";
+            }else{
+                var mensaje = "Los estudiantes ";
+            }
+            var retu = verificar(si_activo,si_desactivo,si_m,si_f,si_dep,si_prov,si_nom,si_apell,carrera,dep,provi,nom,ap,am,si,si_apla,si_apro,si_des);
 
             html += "<div class='alert alert-secondary' role='alert'>"+mensaje+" "+retu+" son "+data[data.length-1].total+"</div>";
             html+="<div class='alert alert-secondary' role='alert'>Detallamos en la siguiente tabla</div>"
@@ -108,7 +115,8 @@
                   html += "<th>provincia</th>";
                   html += "<th>region</th>";
                   html += "<th>sexo</th>";
-                    html += "<th>carrera</th>";
+                  html += "<th>Abandono</th>";
+                  html += "<th>Perdio año</th>";
                 html += "</tr>";
               html += "</thead>";
               html += "  <tbody>";
@@ -128,7 +136,8 @@
                     html += "<td>"+data[i].provi+"</td>";
                     html += "<td>"+data[i].regi+"</td>";
                     html += "<td>"+data[i].sexo+"</td>";
-                        html += "<td>"+data[i].car+"</td>";
+                    html += "<td>"+data[i].abandono+"</td>";
+                    html += "<td>"+data[i].estado_ano+"</td>";
                   html += "</tr>";
                 }
                 contar++;
@@ -438,15 +447,17 @@
             var si_prov = data[data.length-1].si_prov;
             var si_des = data[data.length-1].si_des;
             var si_apla = data[data.length-1].si_apla;
+            var si_apro = data[data.length-1].si_apro;
             var si_ar = data[data.length-1].si_ar;
             var c_area = data[data.length-1].c_area;
             for (var i = 0; i < 1; i++) {
               var dep = data[i].departamento;
               var provi = data[i].provincia;
             }
+          //  alert(si_apla+"    "+si_apro);
             var si = "no";
             var mensaje = "Los estudiantes ";
-            var retu = verificar2(si_activo,si_desactivo,si_m,si_f,si_dep,si_prov,dep,provi,si_des,si_apla,si_ar,c_area,si);
+            var retu = verificar2(si_activo,si_desactivo,si_m,si_f,si_dep,si_prov,dep,provi,si_des,si_apla,si_ar,si_apro,c_area,si);
 
             html += "<div class='alert alert-secondary' role='alert'>"+mensaje+" "+retu+" son "+data[data.length-1].total+"</div>";
             html+="<div class='alert alert-secondary' role='alert'>Detallamos en la siguiente tabla</div>"
@@ -465,7 +476,8 @@
                   html += "<th>provincia</th>";
                   html += "<th>region</th>";
                   html += "<th>sexo</th>";
-                    html += "<th>Abandono</th>";
+                  html += "<th>Abandono</th>";
+                  html += "<th>Año perdido</th>";
                 html += "</tr>";
               html += "</thead>";
               html += "  <tbody>";
@@ -485,7 +497,8 @@
                     html += "<td>"+data[i].provincia+"</td>";
                     html += "<td>"+data[i].region+"</td>";
                     html += "<td>"+data[i].sexo+"</td>";
-                    html += "<td>"+data[i].desercion+"</td>";
+                    html += "<td>"+data[i].abandono+"</td>";
+                    html += "<td>"+data[i].estado_ano+"</td>";
                   html += "</tr>";
                 }
                 contar++;
@@ -507,7 +520,7 @@
       console.log("Total:", obj.to);
       console.log("Indice:", obj.indice);
     });*/
-    function verificar(si_activo,si_desactivo,si_m,si_f,si_dep,si_prov,si_nom,si_apell,carrera,dep,provi,nom,ap,am,si){
+    function verificar(si_activo,si_desactivo,si_m,si_f,si_dep,si_prov,si_nom,si_apell,carrera,dep,provi,nom,ap,am,si,si_apla,si_apro,si_des){
       men = "";
 
       if(si_activo != "no"&& si =="no"){
@@ -565,6 +578,22 @@
         if(am != ""){
           men+=" "+am;
         }
+      }
+
+      if(si_des != "no"&& si =="no"){
+          men+=" desertores ";  si = "si";
+      }else if(si_des != "no"&& si =="si"){
+        men+=", desertores"; si = "si";
+      }
+      if(si_apla != "no"&& si =="no"){
+          men+=" reprobados ";  si = "si";
+      }else if(si_apla != "no"&& si =="si"){
+        men+=", reprobados";si = "si";
+      }
+      if(si_apro != "no"&& si =="no"){
+          men+=" aprobados ";  si = "si";
+      }else if(si_apro != "no"&& si =="si"){
+        men+=", aprobados";si = "si";
       }
       men+=" de la carrera de "+carrera;
       return men;
@@ -648,7 +677,7 @@
       return me;
     }
 
-    function verificar2(si_activo,si_desactivo,si_m,si_f,si_dep,si_prov,dep,provi,si_des,si_apla,si_ar,c_area,si){
+    function verificar2(si_activo,si_desactivo,si_m,si_f,si_dep,si_prov,dep,provi,si_des,si_apla,si_ar,si_apro,c_area,si){
       men = "";
 
       if(si_activo != "no"&& si =="no"){
@@ -693,6 +722,11 @@
           men+=" reprobados ";  si = "si";
       }else if(si_apla != "no"&& si =="si"){
         men+=", reprobados";si = "si";
+      }
+      if(si_apro != "no"&& si =="no"){
+          men+=" aprobados ";  si = "si";
+      }else if(si_apro != "no"&& si =="si"){
+        men+=", aprobados";si = "si";
       }
       var si1 = "no";
       if(si_ar != "no"&& si =="si"){
