--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
       <script src="{{ url_for('static', filename='jquery-3.5.1.min.js') }}" charset="utf-8"></script>
 
       <link href="{{ url_for('static', filename='bootstrap-5.0.2/css/bootstrap.min.css') }}" type="text/css" rel="stylesheet">
-
+      <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     </head>
     <body>
 
@@ -33,6 +33,7 @@
       <div class="respuesta" id='respuesta'>
 
       </div>
+      <center><canvas id='grafica'  width='250' height='250'></canvas></center>
     </div>
     <script type="text/javascript">
     function buscarDatos(){  var bus = document.getElementById("buscar").value;
@@ -42,14 +43,15 @@
         type: "POST", //type of submit
         cache: false, //important or else you might get wrong data returned to you
         url: "/respuesta", //destination
-        datatype: "json", //expected data format from process.php
+        datatype: "html", //expected data format from process.php
         data: datos, //target your form's data and serialize for a POST
         contentType:false,
         processData:false,
         success: function(data){
           alert(data);
           console.log(data);
-            retorno1(data);
+            //retorno1(data);
+              $('#respuesta').html(data);
         },
       });
     }
@@ -82,6 +84,7 @@
             var si_apla = data[data.length-1].si_apla;
             var si_apro = data[data.length-1].si_apro;
             var si_des = data[data.length-1].si_des;
+            var si_curso = data[data.length-1].si_curso;
               var carrera = data[data.length-1].car;
             for (var i = 0; i < 1; i++) {
               var dep = data[i].dep;
@@ -89,6 +92,7 @@
               var nom = data[i].nombre;
               var ap = data[i].ap;
               var am = data[i].am;
+              var grado = data[i].grado;
             }
             var si = "no";var mensaje = "";
             if(si_nom != "no"){
@@ -96,7 +100,7 @@
             }else{
                 var mensaje = "Los estudiantes ";
             }
-            var retu = verificar(si_activo,si_desactivo,si_m,si_f,si_dep,si_prov,si_nom,si_apell,carrera,dep,provi,nom,ap,am,si,si_apla,si_apro,si_des);
+            var retu = verificar(si_activo,si_desactivo,si_m,si_f,si_dep,si_prov,si_nom,si_apell,carrera,dep,provi,nom,ap,am,si,si_apla,si_apro,si_des,si_curso,grado);
 
             html += "<div class='alert alert-secondary' role='alert'>"+mensaje+" "+retu+" son "+data[data.length-1].total+"</div>";
             html+="<div class='alert alert-secondary' role='alert'>Detallamos en la siguiente tabla</div>"
@@ -117,6 +121,8 @@
                   html += "<th>sexo</th>";
                   html += "<th>Abandono</th>";
                   html += "<th>Perdio año</th>";
+                  html += "<th>Carrera</th>";
+                  html += "<th>Curso</th>";
                 html += "</tr>";
               html += "</thead>";
               html += "  <tbody>";
@@ -138,6 +144,8 @@
                     html += "<td>"+data[i].sexo+"</td>";
                     html += "<td>"+data[i].abandono+"</td>";
                     html += "<td>"+data[i].estado_ano+"</td>";
+                    html += "<td>"+data[i].carrera_nom+"</td>";
+                    html += "<td>"+data[i].grado+"</td>";
                   html += "</tr>";
                 }
                 contar++;
@@ -507,6 +515,189 @@
             html +="</table>";
             }
 
+            if(indice == "seleccionar_asignatura_estudiante"){
+
+              nombres = "";var carrera = "";var grado ="";
+              var mensaje = "";var si_hay = "no";
+              var nom_apell = data[data.length-1].si_nom_apell;
+              var calif = data[data.length-1].si_cali;
+              if(nom_apell != "no"){//si esto es diferente de no existe el nombre en la base de datos
+                //si es vacio eso quiere decir que se encontro al estudiante en la Tabla
+                for(var i = 0; i<1;i++){
+                  nombres = data[i].nombre_es;
+                  carrera = data[i].nombre_carrera;
+                  grado = data[i].grado;
+                }
+                var si_car = data[data.length-1].si_car;
+                var si_curso = data[data.length-1].si_curso;
+                mensaje = "El estudiante "+nombres;
+                var si = "no";
+                mensaje+=verificar_grado(si_car,si_curso,carrera,grado,si);
+                si_hay = "si";
+              }else{
+                nombres = data[data.length-1].nombre+" "+data[data.length-1].apellid_p;
+                mensaje = "No se encontro información del estudiante "+nombres;
+              }
+
+              if(si_hay == "si"){
+                if(calif != "no"){
+                  html+="<div class='alert alert-secondary' role='alert'>"+mensaje+" tiene las siguientes calificaciones en las masterias</div>";
+                }else{
+                  html+="<div class='alert alert-secondary' role='alert'>"+mensaje+" tiene las siguientes materias</div>";
+                }
+                html += "<h2>Tabla de Asignaturas</h2>";
+                html += "<table class='table table-striped'>";
+                  html += "<thead>";
+                    html += "<tr>";
+                      html += "<th>Nro</th>";
+                      html += "<th>Asignatura</th>";
+                      html += "<th>Curso</th>";
+                      if(calif != "no"){
+                        html += "<th>Calificación</th>";
+                      }
+                    html += "</tr>";
+                  html += "</thead>";
+                html += "  <tbody>";
+                var  contar = 0;
+                for (var i = 0; i < data.length-1; i++) {
+                  if (data[i].carrera === null || data[i].carrera === "") {
+                      html += "Lo siento, no tengo una respuesta para esa pregunta o puede argumentar un poco mas.";
+                  } else {
+                    html +="<tr>";
+                      html += "<td>"+(i+1)+"</td>";
+                      html += "<td>"+data[i].nombre_asignatura+"</td>";
+                      html += "<td>"+data[i].grado+"</td>";
+                      if(calif != "no"){
+                        html += "<td>"+data[i].calificacion+"</td>";
+                      }
+                    html += "</tr>";
+                  }
+                  contar++;
+                }
+                html +=" </tbody>";
+                html +="</table>";
+                html+="Se tiene "+contar+" asignaturas activos";
+
+              }else{
+                html+="<div class='alert alert-secondary' role='alert'>"+mensaje+"</div>";
+              }
+            }
+
+            var ac = {
+              1: "Ingenieria Informatica",
+              2: "Ingenieria civil",
+              3: "Ingenieria de minas",
+              4: "Ingenieria electromecanica",
+              5: "Ingenieria mecanica automotriz",
+              6: "Ingenieria agronomia",
+              7: "Ingenieria evaporiticos del litio",
+              8: "Derecho",
+              9: "Ciencias de la Educacion",
+              10: "contaduria",
+              11: "Odontologia",
+              12: "Laboratorio Clinico",
+              13: "Enfermeria",
+              14: "Medicina",
+              15: "Ingenieria bio medica",
+              16: "comunicacion social",
+              17: "bioquimica"
+          };
+
+            if(indice == "total_de_estudiantes_estadisticas"){
+              var vapro = [];
+              for (var i = 0; i < 18; i++) {
+                  vapro.push(0);
+              }
+              var vaplaz = [];
+              for (var i = 0; i < 18; i++) {
+                  vaplaz.push(0);
+              }
+              var vdes = [];
+              for (var i = 0; i < 18; i++) {
+                  vdes.push(0);
+              }
+              var vndes = [];
+              for (var i = 0; i < 18; i++) {
+                  vndes.push(0);
+              }
+
+               var si_des = data[data.length-1].si_des;
+               var si_apla = data[data.length-1].si_apla;
+               var si_apro = data[data.length-1].si_apro;
+               var capro = 0;var caplaz = 0;var cdes = 0;var cndes = 0;var total = 0;
+               for(var i = 0;i<data.length-1; i++){
+                 if(data[i].abandono == "si"){
+                   cdes++;
+                   vdes[data[i].cod_carrera]=vdes[data[i].cod_carrera]+1;
+                 }else if(data[i].abandono == "no"){
+                   cndes++;
+                   vndes[data[i].cod_carrera]=vndes[data[i].cod_carrera]+1;
+                 }
+                 if(data[i].estado_ano == "aprobado"){
+                   capro++;
+                   vapro[data[i].cod_carrera]=vapro[data[i].cod_carrera]+1;
+                 }else if(data[i].estado_ano == "reprobado"){
+                   caplaz++;
+                   vaplaz[data[i].cod_carrera]=vaplaz[data[i].cod_carrera]+1;
+                 }
+                 total=total+1;
+               }
+               for(var j = 0;j<vapro.length;j++){
+                 console.log(j+"  =  "+vapro[j]+"<br>");
+               }
+               for(var j = 0;j<vaplaz.length;j++){
+                 console.log(j+"  =  "+vaplaz[j]+"<br>");
+               }
+               var mensaje = "La cantidad de ";var si = "no";
+               if(si_des != "no" && si == "no"){
+                 mensaje+= " desertores ";
+                 si = "si";
+               }
+               if(si_apla != "no" && si == "no"){
+                 mensaje+= " reprobados ";
+                 si = "si";
+               }else  if(si_apla != "no" && si == "si"){
+                 mensaje+= ", reprobados ";
+                 si = "si";
+               }
+               if(si_apro != "no" && si == "no"){
+                 mensaje+= " aprobados ";
+                 si = "si";
+               }else  if(si_apro != "no" && si == "si"){
+                 mensaje+= ", aprobados ";
+                 si = "si";
+               }
+
+               mensaje+=" es lo siguiente por area y carreras";
+               html+="<div class='alert alert-secondary' role='alert'>"+mensaje+"</div>";
+
+               // Datos para el gráfico
+               var data = {
+                   labels: ["Aprobado", "Reprobado"],
+                   datasets: [{
+                       data: [capro, caplaz], // Valores para cada sección de la torta
+                       backgroundColor: ["#FF6384", "#36A2EB"] // Colores para cada sección
+                   }]
+               };
+
+               // Configuración del gráfico
+               var options = {
+                   responsive: true,
+                   maintainAspectRatio: false
+               };
+
+               // Obtener el contexto del lienzo
+               var ctx = document.getElementById('grafica1').getContext('2d');
+
+               // Crear el gráfico de torta
+               var myPieChart = new Chart(ctx, {
+                   type: 'pie',
+                   data: data,
+                   options: options
+               });
+               html+="<center><canvas id='grafica1'  width='250' height='250'></canvas></center>";
+             }
+
           html +="</container>";
 
           $('#respuesta').html(html);
@@ -520,7 +711,7 @@
       console.log("Total:", obj.to);
       console.log("Indice:", obj.indice);
     });*/
-    function verificar(si_activo,si_desactivo,si_m,si_f,si_dep,si_prov,si_nom,si_apell,carrera,dep,provi,nom,ap,am,si,si_apla,si_apro,si_des){
+    function verificar(si_activo,si_desactivo,si_m,si_f,si_dep,si_prov,si_nom,si_apell,carrera,dep,provi,nom,ap,am,si,si_apla,si_apro,si_des,si_curso,grado){
       men = "";
 
       if(si_activo != "no"&& si =="no"){
@@ -594,6 +785,12 @@
           men+=" aprobados ";  si = "si";
       }else if(si_apro != "no"&& si =="si"){
         men+=", aprobados";si = "si";
+      }
+
+      if(si_curso != "no" && si == "no"){
+          men+=" del curso "+grado;  si = "si";
+      }else if(si_curso != "no" && si == "si"){
+        men+=", del curso "+grado;  si = "si";
       }
       men+=" de la carrera de "+carrera;
       return men;
@@ -745,6 +942,21 @@
       return men;
     }
 
+function verificar_grado(si_car,si_curso,carrera,grado,si){
+  men = "";
+  if(si_car != "no" && si == "no"){
+    men+= " de la carrera "+carrera;
+    si = "si";
+  }else{
+    men+= " de la carrera "+carrera;si = "si";
+  }
+  if(si_curso != "no" && si == "no"){
+      men+=" del curso "+grado;  si = "si";
+  }else if(si_curso != "no" && si == "si"){
+    men+=", del curso "+grado;  si = "si";
+  }
+  return men;
+}
     </script>
 
     <script src="{{ url_for('static', filename='bootstrap-5.0.2/js/bootstrap.min.js') }}" charset="utf-8"></script>
