--- a/templates/index.html
+++ b/templates/index.html
@@ -859,7 +859,7 @@
       return men;
     }
     var ab = ["Tecnologia", "Salud", "Social"];
-    function verificaraREA(si,area,direccion_area,telefono_area,nombre_carrera ,direccion_carrera,si_ar,c_area){
+    function verificar_area(si, area, direccion_area, telefono_area, nombre_carrera, direccion_carrera, si_ar, c_area){
       var par =  c_area.split("|");
       var me = "";
       for(var i=0;i<par.length-1;i++){
