--- a/templates/registrarPreguntas.html
+++ b/templates/registrarPreguntas.html
@@ -16,24 +16,32 @@
         <div class="col-md-6">
           <div class="card shadow-sm">
             <div class="card-body">
-              <h3 class="card-title text-center mb-4">Iniciar sesión</h3>
-              <div class="row justify-content-center">
-               <div class="col-md-6 text-center">
-                 <img src="{{ url_for('static', filename='imagenes/user.png') }}" height="100px" width="100px"class="img-circle img-fluid d-block mx-auto">
-               </div>
-             </div>
+              <div id="error">
+
+              </div>
+              <h3 class="card-title text-center mb-4">Registro de preguntas de usuario</h3>
+
               <form method="POST" action="{{ url_for('login') }}">
                 <div class="mb-3">
-                  <label for="usuario" class="form-label">Usuario</label>
-                  <input type="text" class="form-control" id="usuario" name="usuario" required>
+                  <label for="pregunta_nuevo" class="form-label">Posible pregunta</label>
+                  <input type="text" class="form-control" id="pregunta_nuevo" name="pregunta_nuevo" required>
                 </div>
                 <div class="mb-3">
-                  <label for="password" class="form-label">Contraseña</label>
-                  <input type="password" class="form-control" id="password" name="password" required>
+                  <label for="posible_respuesta">Respuesta</label>
+                  <select name="categorias" id='posible_respuesta' class="form-control">
+                    <option value="">Seleccione tipo de respuesta</option>
+                      {% for categoria in consulta %}
+                          <option value="{{ categoria[0] }}" title="{{ categoria[3] }}">
+                              <abbr title="{{ categoria[1] }}">{{ categoria[1] }}</abbr>
+                          </option>
+                      {% endfor %}
+                  </select>
+
                 </div>
                 <div class="d-grid gap-2">
-                  <button type="button" class="btn btn-primary btn-block" onclick="validar()">Iniciar sesión</button>
+                  <button type="button" class="btn btn-primary btn-block" onclick="registrar()">Registrar</button>
                 </div>
+
               </form>
             </div>
           </div>
@@ -48,27 +56,33 @@
 </html>
 
     <script type="text/javascript">
-    function validar(){
-      var usuario=document.getElementById("usuario").value;
-      var password=document.getElementById("password").value;
+    function registrar(){
+      alert(5);
+      var pregunta_nuevo = document.getElementById("pregunta_nuevo").value;
+      var posible_respuesta = document.getElementById("posible_respuesta").value;
       var datos=new  FormData();
-      datos.append("usuario",usuario);
-      datos.append("password",password);
+      datos.append("pregunta_nuevo",pregunta_nuevo);
+      datos.append("posible_respuesta",posible_respuesta);
+      if(posible_respuesta == '' || pregunta_nuevo == ''){
+        $('#error').html("<div class='alert alert-danger'>Algun campo sin datos o sin seleccionar</div>");
+        return;
+      }
+      alert(pregunta_nuevo+"   "+posible_respuesta);
       $.ajax({
         type: "POST", //type of submit
         cache: false, //important or else you might get wrong data returned to you
-        url: "/validando", //destination
+        url: "/regPreg", //destination
         datatype: "html", //expected data format from process.php
         data: datos, //target your form's data and serialize for a POST
         contentType:false,
         processData:false,
         success: function(data){
-          //alert(data);
+          alert(data);
           console.log(data);
-          if(data == "si"){
+          if(data == "correcto"){
             redireccionar();
           }else{
-            $('#respuesta').html("<div class='alert alert-danger'>Ocurrio un problema al Iniciar sesión</div>");
+            $('#error').html("<div class='alert alert-danger'>Ocurrio un problema al insertar los datos</div>");
           }
             //retorno1(data);
         }
@@ -77,7 +91,7 @@
 
 function redireccionar(){
   // Redireccionar a una URL específica
-  window.location.href = "/";
+  window.location.href = "/preg";
 }
 
 </script>
