--- a/templates/menu.html
+++ b/templates/menu.html
@@ -7,11 +7,14 @@
     <div class='collapse navbar-collapse' id='navbarNav'>
       <ul class='navbar-nav me-auto mb-2 mb-lg-0'>
         <li class='nav-item' title='Inicio'>
-          <a class='nav-link btn btn-outline-warning' href='/'>Inicio</a>
+          <a class='nav-link btn btn-outline-secondary' href='/'>Inicio</a>
         </li>
         {% if usuario %}
           <li class='nav-item' title='Registro'>
-            <a class='nav-link btn btn-outline-warning' href='/preg'>Registro Preguntas</a>
+            <a class='nav-link btn btn-outline-secondary' href='/preg'>Registro Preguntas</a>
+          </li>
+          <li class='nav-item' title='Registro de respuesta'>
+            <a class='nav-link btn btn-outline-secondary' href='/resp'>Registro Respuesta</a>
           </li>
         {% endif %}
       </ul>
