--- a/templates/menu.html
+++ b/templates/menu.html
@@ -11,10 +11,10 @@
         </li>
         {% if usuario %}
           <li class='nav-item' title='Registro'>
-            <a class='nav-link btn btn-outline-secondary' href='/preg'>Registro Preguntas</a>
+            <a class='nav-link btn btn-outline-secondary' href='/tpreg'>Preguntas</a>
           </li>
           <li class='nav-item' title='Registro de respuesta'>
-            <a class='nav-link btn btn-outline-secondary' href='/resp'>Registro Respuesta</a>
+            <a class='nav-link btn btn-outline-secondary' href='/tresp'>Respuestas</a>
           </li>
         {% endif %}
       </ul>
