--- a/templates/tablaRespuesta.html
+++ b/templates/tablaRespuesta.html
@@ -104,7 +104,7 @@
                     <ul class="pagination d-flex flex-wrap">
                         <!-- Botón anterior -->
                         {% if pagina != 1 %}
-                            <li class="page-item"><a class="page-link" onclick="buscarporRES({{1}})">{{ anterior}}</a></li>
+                            <li class="page-item"><a class="page-link" onclick="buscarporRES({{pagina-1}})">{{ anterior}}</a></li>
                         {% else %}
                             <li class="page-item"><span class="page-link text-muted">{{ anterior }}</span></li>
                         {% endif %}
