--- a/templates/menu.html
+++ b/templates/menu.html
@@ -1,4 +1,4 @@
-<nav class='navbar navbar-expand-lg navbar-dark bg-dark fixed-top shadow-sm'>
+<nav class='navbar navbar-expand-lg navbar-secondary bg-dark fixed-top shadow-sm'>
   <div class='container'>
     <a href='#' class='navbar-brand'><img src='../static/imagenes/unsxx.png' height='30' width='30' class='rounded-circle'></a>
     <button class='navbar-toggler' type='button' data-bs-toggle='collapse' data-bs-target='#navbarNav' aria-controls='navbarNav' aria-expanded='false' aria-label='Toggle navigation'>
@@ -15,6 +15,9 @@
           </li>
           <li class='nav-item' title='Registro de respuesta'>
             <a class='nav-link btn btn-outline-secondary' href='/tresp'>Respuestas</a>
+          </li>
+          <li class='nav-item' title='backup de la base de datos'>
+            <a class='nav-link btn btn-outline-secondary' href='/backup'>Backup</a>
           </li>
         {% endif %}
       </ul>
